--- a/Platformer_WinAPI/Platformer_WinAPI.vcxproj
+++ b/Platformer_WinAPI/Platformer_WinAPI.vcxproj
@@ -141,6 +141,9 @@
     <ClInclude Include="CPlayer.h" />
     <ClInclude Include="CStage.h" />
     <ClInclude Include="CStage01.h" />
+    <ClInclude Include="CStage02.h" />
+    <ClInclude Include="CStage03.h" />
+    <ClInclude Include="CStage04.h" />
     <ClInclude Include="CStageManager.h" />
     <ClInclude Include="Define.h" />
     <ClInclude Include="framework.h" />
@@ -163,6 +166,9 @@
     <ClCompile Include="CInputManager.cpp" />
     <ClCompile Include="CStage.cpp" />
     <ClCompile Include="CStage01.cpp" />
+    <ClCompile Include="CStage02.cpp" />
+    <ClCompile Include="CStage03.cpp" />
+    <ClCompile Include="CStage04.cpp" />
     <ClCompile Include="CStageManager.cpp" />
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
