--- a/Platformer_WinAPI/Platformer_WinAPI.vcxproj.filters
+++ b/Platformer_WinAPI/Platformer_WinAPI.vcxproj.filters
@@ -178,7 +178,7 @@
       <Filter>05. Stage\04. Stage04</Filter>
     </ClInclude>
     <ClInclude Include="CItem.h">
-      <Filter>헤더 파일</Filter>
+      <Filter>01. Object\05. Item</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -234,7 +234,7 @@
       <Filter>05. Stage\04. Stage04</Filter>
     </ClCompile>
     <ClCompile Include="CItem.cpp">
-      <Filter>소스 파일</Filter>
+      <Filter>01. Object\05. Item</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
