--- a/Platformer_WinAPI/Platformer_WinAPI.vcxproj
+++ b/Platformer_WinAPI/Platformer_WinAPI.vcxproj
@@ -136,10 +136,12 @@
     <ClInclude Include="CCollisionManager.h" />
     <ClInclude Include="CItem.h" />
     <ClInclude Include="CMainGame.h" />
+    <ClInclude Include="CMob01.h" />
     <ClInclude Include="CMonster.h" />
     <ClInclude Include="CObject.h" />
     <ClInclude Include="CObjectManager.h" />
     <ClInclude Include="CPlayer.h" />
+    <ClInclude Include="CPlayer02.h" />
     <ClInclude Include="CPlayer03.h" />
     <ClInclude Include="CStage.h" />
     <ClInclude Include="CStage01.h" />
@@ -162,11 +164,13 @@
     <ClCompile Include="CCollisionManager.cpp" />
     <ClCompile Include="CItem.cpp" />
     <ClCompile Include="CMainGame.cpp" />
+    <ClCompile Include="CMob01.cpp" />
     <ClCompile Include="CMonster.cpp" />
     <ClCompile Include="CObject.cpp" />
     <ClCompile Include="CObjectManager.cpp" />
     <ClCompile Include="CPlayer.cpp" />
     <ClCompile Include="CInputManager.cpp" />
+    <ClCompile Include="CPlayer02.cpp" />
     <ClCompile Include="CPlayer03.cpp" />
     <ClCompile Include="CStage.cpp" />
     <ClCompile Include="CStage01.cpp" />
