--- a/Platformer_WinAPI/Platformer_WinAPI.vcxproj.filters
+++ b/Platformer_WinAPI/Platformer_WinAPI.vcxproj.filters
@@ -106,6 +106,9 @@
     <Filter Include="01. Object\05. Item">
       <UniqueIdentifier>{7c405f8f-bbd5-49ab-8b8a-d1e612793f8b}</UniqueIdentifier>
     </Filter>
+    <Filter Include="02. Manager\05. LineManager">
+      <UniqueIdentifier>{39e72d16-dc61-468c-bb53-d0fe4060a2d8}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="framework.h">
@@ -183,6 +186,12 @@
     <ClInclude Include="CLifeItem.h">
       <Filter>01. Object\05. Item</Filter>
     </ClInclude>
+    <ClInclude Include="CLine.h">
+      <Filter>02. Manager\05. LineManager</Filter>
+    </ClInclude>
+    <ClInclude Include="CLineManager.h">
+      <Filter>02. Manager\05. LineManager</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Platformer_WinAPI.cpp">
@@ -241,6 +250,12 @@
     </ClCompile>
     <ClCompile Include="CLifeItem.cpp">
       <Filter>01. Object\05. Item</Filter>
+    </ClCompile>
+    <ClCompile Include="CLineManager.cpp">
+      <Filter>02. Manager\05. LineManager</Filter>
+    </ClCompile>
+    <ClCompile Include="CLine.cpp">
+      <Filter>02. Manager\05. LineManager</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
