--- a/Platformer_WinAPI/Platformer_WinAPI.vcxproj
+++ b/Platformer_WinAPI/Platformer_WinAPI.vcxproj
@@ -141,6 +141,7 @@
     <ClInclude Include="CObject.h" />
     <ClInclude Include="CObjectManager.h" />
     <ClInclude Include="CPlayer.h" />
+    <ClInclude Include="CPlayer01.h" />
     <ClInclude Include="CStage.h" />
     <ClInclude Include="CStage01.h" />
     <ClInclude Include="CStage02.h" />
@@ -168,6 +169,7 @@
     <ClCompile Include="CObjectManager.cpp" />
     <ClCompile Include="CPlayer.cpp" />
     <ClCompile Include="CInputManager.cpp" />
+    <ClCompile Include="CPlayer01.cpp" />
     <ClCompile Include="CStage.cpp" />
     <ClCompile Include="CStage01.cpp" />
     <ClCompile Include="CStage02.cpp" />
