--- a/Platformer_WinAPI/Platformer_WinAPI.vcxproj.filters
+++ b/Platformer_WinAPI/Platformer_WinAPI.vcxproj.filters
@@ -49,6 +49,9 @@
     <Filter Include="02. Manager\01. StageManager">
       <UniqueIdentifier>{5673e98d-45c9-474d-aa71-fd5cc8285800}</UniqueIdentifier>
     </Filter>
+    <Filter Include="02. Manager\02. CollisionManager">
+      <UniqueIdentifier>{331ece6f-5c62-41a9-8c77-2845b63c1158}</UniqueIdentifier>
+    </Filter>
     <Filter Include="02. Manager\03. UIManager">
       <UniqueIdentifier>{d23109e7-20d6-47f1-be17-ebc61261148b}</UniqueIdentifier>
     </Filter>
@@ -102,9 +105,6 @@
     </Filter>
     <Filter Include="01. Object\05. Item">
       <UniqueIdentifier>{7c405f8f-bbd5-49ab-8b8a-d1e612793f8b}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="03. Design\AbstractFactory\02. CollisionManager">
-      <UniqueIdentifier>{331ece6f-5c62-41a9-8c77-2845b63c1158}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
@@ -160,7 +160,7 @@
       <Filter>05. Stage\00. Stage</Filter>
     </ClInclude>
     <ClInclude Include="CCollisionManager.h">
-      <Filter>03. Design\AbstractFactory\02. CollisionManager</Filter>
+      <Filter>02. Manager\02. CollisionManager</Filter>
     </ClInclude>
     <ClInclude Include="CBullet.h">
       <Filter>01. Object\03. Bullet</Filter>
@@ -183,14 +183,8 @@
     <ClInclude Include="CLifeItem.h">
       <Filter>01. Object\05. Item</Filter>
     </ClInclude>
-    <ClInclude Include="CPlayer02.h">
-      <Filter>01. Object\01. Player</Filter>
-    </ClInclude>
     <ClInclude Include="CPlayer03.h">
-      <Filter>01. Object\01. Player</Filter>
-    </ClInclude>
-    <ClInclude Include="CMob01.h">
-      <Filter>01. Object\02. Monster\05. Mob</Filter>
+      <Filter>헤더 파일</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -228,7 +222,7 @@
       <Filter>05. Stage\00. Stage</Filter>
     </ClCompile>
     <ClCompile Include="CCollisionManager.cpp">
-      <Filter>03. Design\AbstractFactory\02. CollisionManager</Filter>
+      <Filter>02. Manager\02. CollisionManager</Filter>
     </ClCompile>
     <ClCompile Include="CBullet.cpp">
       <Filter>01. Object\03. Bullet</Filter>
@@ -251,14 +245,8 @@
     <ClCompile Include="CLifeItem.cpp">
       <Filter>01. Object\05. Item</Filter>
     </ClCompile>
-    <ClCompile Include="CPlayer02.cpp">
-      <Filter>01. Object\01. Player</Filter>
-    </ClCompile>
     <ClCompile Include="CPlayer03.cpp">
-      <Filter>01. Object\01. Player</Filter>
-    </ClCompile>
-    <ClCompile Include="CMob01.cpp">
-      <Filter>01. Object\02. Monster\05. Mob</Filter>
+      <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
