chore : temp Commit
1. Player Posin -> Do Attack에서 포신 돌리던거 Late_Update로 변경

2. UI 매니저 생성

3. CUtility <- 유틸리티 전용 함수, 일단 텍스트 출력만

--- a/Platformer_WinAPI/Platformer_WinAPI.vcxproj.filters
+++ b/Platformer_WinAPI/Platformer_WinAPI.vcxproj.filters
@@ -112,6 +112,9 @@
     <Filter Include="03. Design\AbstractFactory\02. CollisionManager">
       <UniqueIdentifier>{331ece6f-5c62-41a9-8c77-2845b63c1158}</UniqueIdentifier>
     </Filter>
+    <Filter Include="04. Utils\02. Utility">
+      <UniqueIdentifier>{676f91d3-10dd-4cad-8499-14bfce7b5f67}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="framework.h">
@@ -195,14 +198,23 @@
     <ClInclude Include="CLineManager.h">
       <Filter>02. Manager\05. LineManager</Filter>
     </ClInclude>
-    <ClInclude Include="CPlayer03.h">
-      <Filter>헤더 파일</Filter>
-    </ClInclude>
     <ClInclude Include="CPlayer02.h">
-      <Filter>헤더 파일</Filter>
+      <Filter>01. Object\01. Player</Filter>
+    </ClInclude>
+    <ClInclude Include="CPlayer03.h">
+      <Filter>01. Object\01. Player</Filter>
+    </ClInclude>
+    <ClInclude Include="CBoss03.h">
+      <Filter>01. Object\02. Monster\01. Boss01</Filter>
     </ClInclude>
     <ClInclude Include="CMob01.h">
+      <Filter>01. Object\02. Monster\05. Mob</Filter>
+    </ClInclude>
+    <ClInclude Include="CUIManager.h">
       <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="CUtility.h">
+      <Filter>04. Utils\02. Utility</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -269,13 +281,19 @@
     <ClCompile Include="CLine.cpp">
       <Filter>02. Manager\05. LineManager</Filter>
     </ClCompile>
-    <ClCompile Include="CPlayer03.cpp">
-      <Filter>소스 파일</Filter>
-    </ClCompile>
     <ClCompile Include="CPlayer02.cpp">
-      <Filter>소스 파일</Filter>
+      <Filter>01. Object\01. Player</Filter>
+    </ClCompile>
+    <ClCompile Include="CPlayer03.cpp">
+      <Filter>01. Object\01. Player</Filter>
+    </ClCompile>
+    <ClCompile Include="CBoss03.cpp">
+      <Filter>01. Object\02. Monster\01. Boss01</Filter>
     </ClCompile>
     <ClCompile Include="CMob01.cpp">
+      <Filter>01. Object\02. Monster\05. Mob</Filter>
+    </ClCompile>
+    <ClCompile Include="CUIManager.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
