--- a/Platformer_WinAPI/Platformer_WinAPI.vcxproj
+++ b/Platformer_WinAPI/Platformer_WinAPI.vcxproj
@@ -132,8 +132,10 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="CAbstractFactory.h" />
+    <ClInclude Include="CBoss03.h" />
     <ClInclude Include="CBullet.h" />
     <ClInclude Include="CCollisionManager.h" />
+    <ClInclude Include="CUtility.h" />
     <ClInclude Include="CItem.h" />
     <ClInclude Include="CLifeItem.h" />
     <ClInclude Include="CLine.h" />
@@ -152,6 +154,7 @@
     <ClInclude Include="CStage03.h" />
     <ClInclude Include="CStage04.h" />
     <ClInclude Include="CStageManager.h" />
+    <ClInclude Include="CUIManager.h" />
     <ClInclude Include="Define.h" />
     <ClInclude Include="framework.h" />
     <ClInclude Include="InputKeyInfo.h" />
@@ -163,6 +166,7 @@
     <ClInclude Include="Vector2.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="CBoss03.cpp" />
     <ClCompile Include="CBullet.cpp" />
     <ClCompile Include="CCollisionManager.cpp" />
     <ClCompile Include="CItem.cpp" />
@@ -184,6 +188,7 @@
     <ClCompile Include="CStage03.cpp" />
     <ClCompile Include="CStage04.cpp" />
     <ClCompile Include="CStageManager.cpp" />
+    <ClCompile Include="CUIManager.cpp" />
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
