--- a/Platformer_WinAPI/Platformer_WinAPI.vcxproj.filters
+++ b/Platformer_WinAPI/Platformer_WinAPI.vcxproj.filters
@@ -195,14 +195,17 @@
     <ClInclude Include="CLineManager.h">
       <Filter>02. Manager\05. LineManager</Filter>
     </ClInclude>
-    <ClInclude Include="CPlayer03.h">
-      <Filter>헤더 파일</Filter>
-    </ClInclude>
     <ClInclude Include="CPlayer02.h">
-      <Filter>헤더 파일</Filter>
+      <Filter>01. Object\01. Player</Filter>
+    </ClInclude>
+    <ClInclude Include="CPlayer03.h">
+      <Filter>01. Object\01. Player</Filter>
     </ClInclude>
     <ClInclude Include="CMob01.h">
-      <Filter>헤더 파일</Filter>
+      <Filter>01. Object\02. Monster\05. Mob</Filter>
+    </ClInclude>
+    <ClInclude Include="CPlayer04.h">
+      <Filter>01. Object\01. Player</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -269,14 +272,17 @@
     <ClCompile Include="CLine.cpp">
       <Filter>02. Manager\05. LineManager</Filter>
     </ClCompile>
-    <ClCompile Include="CPlayer03.cpp">
-      <Filter>소스 파일</Filter>
-    </ClCompile>
     <ClCompile Include="CPlayer02.cpp">
-      <Filter>소스 파일</Filter>
+      <Filter>01. Object\01. Player</Filter>
+    </ClCompile>
+    <ClCompile Include="CPlayer03.cpp">
+      <Filter>01. Object\01. Player</Filter>
     </ClCompile>
     <ClCompile Include="CMob01.cpp">
-      <Filter>소스 파일</Filter>
+      <Filter>01. Object\02. Monster\05. Mob</Filter>
+    </ClCompile>
+    <ClCompile Include="CPlayer04.cpp">
+      <Filter>01. Object\01. Player</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
