--- a/Platformer_WinAPI/Platformer_WinAPI.vcxproj.filters
+++ b/Platformer_WinAPI/Platformer_WinAPI.vcxproj.filters
@@ -210,11 +210,11 @@
     <ClInclude Include="CMob01.h">
       <Filter>01. Object\02. Monster\05. Mob</Filter>
     </ClInclude>
-    <ClInclude Include="CUIManager.h">
-      <Filter>헤더 파일</Filter>
-    </ClInclude>
     <ClInclude Include="CUtility.h">
       <Filter>04. Utils\02. Utility</Filter>
+    </ClInclude>
+    <ClInclude Include="CUIManager.h">
+      <Filter>02. Manager\03. UIManager</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -294,7 +294,7 @@
       <Filter>01. Object\02. Monster\05. Mob</Filter>
     </ClCompile>
     <ClCompile Include="CUIManager.cpp">
-      <Filter>소스 파일</Filter>
+      <Filter>02. Manager\03. UIManager</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
