--- a/Platformer_WinAPI/Platformer_WinAPI.vcxproj.filters
+++ b/Platformer_WinAPI/Platformer_WinAPI.vcxproj.filters
@@ -109,11 +109,20 @@
     <Filter Include="02. Manager\05. LineManager">
       <UniqueIdentifier>{39e72d16-dc61-468c-bb53-d0fe4060a2d8}</UniqueIdentifier>
     </Filter>
-    <Filter Include="03. Design\AbstractFactory\02. CollisionManager">
-      <UniqueIdentifier>{331ece6f-5c62-41a9-8c77-2845b63c1158}</UniqueIdentifier>
-    </Filter>
     <Filter Include="04. Utils\02. Utility">
       <UniqueIdentifier>{676f91d3-10dd-4cad-8499-14bfce7b5f67}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="01. Object\03. Bullet\03. Bullet03">
+      <UniqueIdentifier>{745de438-9b87-4535-9813-9268409d2d6b}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="01. Object\03. Bullet\01. Bullet01">
+      <UniqueIdentifier>{93360fbd-576b-47e0-9d04-ccea6eba3185}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="01. Object\03. Bullet\02. Bullet02">
+      <UniqueIdentifier>{33ad0717-66c5-4fba-be3b-74807cbe92df}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="01. Object\03. Bullet\04. Bullet04">
+      <UniqueIdentifier>{d27e0c65-2918-46d2-bf2b-a70493a43326}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
@@ -204,9 +213,6 @@
     <ClInclude Include="CPlayer03.h">
       <Filter>01. Object\01. Player</Filter>
     </ClInclude>
-    <ClInclude Include="CBoss03.h">
-      <Filter>01. Object\02. Monster\01. Boss01</Filter>
-    </ClInclude>
     <ClInclude Include="CMob01.h">
       <Filter>01. Object\02. Monster\05. Mob</Filter>
     </ClInclude>
@@ -215,6 +221,15 @@
     </ClInclude>
     <ClInclude Include="CUIManager.h">
       <Filter>02. Manager\03. UIManager</Filter>
+    </ClInclude>
+    <ClInclude Include="CBoss03.h">
+      <Filter>01. Object\02. Monster\03. Boss03</Filter>
+    </ClInclude>
+    <ClInclude Include="CBullet_Player03.h">
+      <Filter>01. Object\03. Bullet\03. Bullet03</Filter>
+    </ClInclude>
+    <ClInclude Include="CScrollManager.h">
+      <Filter>02. Manager</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -287,14 +302,20 @@
     <ClCompile Include="CPlayer03.cpp">
       <Filter>01. Object\01. Player</Filter>
     </ClCompile>
-    <ClCompile Include="CBoss03.cpp">
-      <Filter>01. Object\02. Monster\01. Boss01</Filter>
-    </ClCompile>
     <ClCompile Include="CMob01.cpp">
       <Filter>01. Object\02. Monster\05. Mob</Filter>
     </ClCompile>
     <ClCompile Include="CUIManager.cpp">
       <Filter>02. Manager\03. UIManager</Filter>
+    </ClCompile>
+    <ClCompile Include="CBoss03.cpp">
+      <Filter>01. Object\02. Monster\03. Boss03</Filter>
+    </ClCompile>
+    <ClCompile Include="CBullet_Player03.cpp">
+      <Filter>01. Object\03. Bullet\03. Bullet03</Filter>
+    </ClCompile>
+    <ClCompile Include="CScrollManager.cpp">
+      <Filter>02. Manager</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
