--- a/Platformer_WinAPI/Platformer_WinAPI.vcxproj
+++ b/Platformer_WinAPI/Platformer_WinAPI.vcxproj
@@ -136,6 +136,7 @@
     <ClInclude Include="CBullet.h" />
     <ClInclude Include="CCollisionManager.h" />
     <ClInclude Include="CLine.h" />
+    <ClInclude Include="CPlatform.h" />
     <ClInclude Include="CUtility.h" />
     <ClInclude Include="CItem.h" />
     <ClInclude Include="CLifeItem.h" />
@@ -179,6 +180,7 @@
     <ClCompile Include="CMonster.cpp" />
     <ClCompile Include="CObject.cpp" />
     <ClCompile Include="CObjectManager.cpp" />
+    <ClCompile Include="CPlatform.cpp" />
     <ClCompile Include="CPlayer.cpp" />
     <ClCompile Include="CInputManager.cpp" />
     <ClCompile Include="CPlayer02.cpp" />
