--- a/Platformer_WinAPI/Platformer_WinAPI.vcxproj
+++ b/Platformer_WinAPI/Platformer_WinAPI.vcxproj
@@ -134,8 +134,10 @@
     <ClInclude Include="CAbstractFactory.h" />
     <ClInclude Include="CBoss03.h" />
     <ClInclude Include="CBullet.h" />
+    <ClInclude Include="CBullet_Player03.h" />
     <ClInclude Include="CCollisionManager.h" />
     <ClInclude Include="CLine.h" />
+    <ClInclude Include="CScrollManager.h" />
     <ClInclude Include="CUtility.h" />
     <ClInclude Include="CItem.h" />
     <ClInclude Include="CLifeItem.h" />
@@ -169,6 +171,7 @@
   <ItemGroup>
     <ClCompile Include="CBoss03.cpp" />
     <ClCompile Include="CBullet.cpp" />
+    <ClCompile Include="CBullet_Player03.cpp" />
     <ClCompile Include="CCollisionManager.cpp" />
     <ClCompile Include="CItem.cpp" />
     <ClCompile Include="CLifeItem.cpp" />
@@ -184,6 +187,7 @@
     <ClCompile Include="CPlayer02.cpp" />
     <ClCompile Include="CPlayer03.cpp" />
     <ClCompile Include="CPlayer04.cpp" />
+    <ClCompile Include="CScrollManager.cpp" />
     <ClCompile Include="CStage.cpp" />
     <ClCompile Include="CStage01.cpp" />
     <ClCompile Include="CStage02.cpp" />
