--- a/Platformer_WinAPI/Platformer_WinAPI.vcxproj
+++ b/Platformer_WinAPI/Platformer_WinAPI.vcxproj
@@ -137,6 +137,7 @@
     <ClInclude Include="CBullet_Player03.h" />
     <ClInclude Include="CCollisionManager.h" />
     <ClInclude Include="CLine.h" />
+    <ClInclude Include="CPlatform.h" />
     <ClInclude Include="CScrollManager.h" />
     <ClInclude Include="CUtility.h" />
     <ClInclude Include="CItem.h" />
@@ -182,6 +183,7 @@
     <ClCompile Include="CMonster.cpp" />
     <ClCompile Include="CObject.cpp" />
     <ClCompile Include="CObjectManager.cpp" />
+    <ClCompile Include="CPlatform.cpp" />
     <ClCompile Include="CPlayer.cpp" />
     <ClCompile Include="CInputManager.cpp" />
     <ClCompile Include="CPlayer02.cpp" />
