--- a/Platformer_WinAPI/Platformer_WinAPI.vcxproj.filters
+++ b/Platformer_WinAPI/Platformer_WinAPI.vcxproj.filters
@@ -124,6 +124,12 @@
     <Filter Include="01. Object\03. Bullet\04. Bullet04">
       <UniqueIdentifier>{d27e0c65-2918-46d2-bf2b-a70493a43326}</UniqueIdentifier>
     </Filter>
+    <Filter Include="01. Object\06. Platform">
+      <UniqueIdentifier>{0a690c0b-ce99-4185-9138-a019028c0be5}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="02. Manager\06. ScrollManager">
+      <UniqueIdentifier>{0357aa8d-51b7-428e-b57a-1db96caf5cb6}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="framework.h">
@@ -225,14 +231,17 @@
     <ClInclude Include="CBoss03.h">
       <Filter>01. Object\02. Monster\03. Boss03</Filter>
     </ClInclude>
-    <ClInclude Include="CPlayer04.h">
-      <Filter>헤더 파일</Filter>
-    </ClInclude>
     <ClInclude Include="CBullet_Player03.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="CPlatform.h">
+      <Filter>01. Object\06. Platform</Filter>
+    </ClInclude>
+    <ClInclude Include="CPlayer04.h">
+      <Filter>01. Object\01. Player</Filter>
+    </ClInclude>
     <ClInclude Include="CScrollManager.h">
-      <Filter>헤더 파일</Filter>
+      <Filter>02. Manager\06. ScrollManager</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -314,14 +323,17 @@
     <ClCompile Include="CBoss03.cpp">
       <Filter>01. Object\02. Monster\03. Boss03</Filter>
     </ClCompile>
-    <ClCompile Include="CPlayer04.cpp">
-      <Filter>소스 파일</Filter>
+    <ClCompile Include="CPlatform.cpp">
+      <Filter>01. Object\06. Platform</Filter>
     </ClCompile>
-    <ClCompile Include="CBullet_Player03.cpp">
-      <Filter>소스 파일</Filter>
+    <ClCompile Include="CPlayer04.cpp">
+      <Filter>01. Object\01. Player</Filter>
     </ClCompile>
     <ClCompile Include="CScrollManager.cpp">
-      <Filter>소스 파일</Filter>
+      <Filter>02. Manager\06. ScrollManager</Filter>
+    </ClCompile>
+    <ClCompile Include="CBullet_Player03.cpp">
+      <Filter>01. Object\03. Bullet\03. Bullet03</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
