--- a/Platformer_WinAPI/Platformer_WinAPI.vcxproj
+++ b/Platformer_WinAPI/Platformer_WinAPI.vcxproj
@@ -133,7 +133,10 @@
   <ItemGroup>
     <ClInclude Include="CAbstractFactory.h" />
     <ClInclude Include="CBoss03.h" />
+    <ClInclude Include="CBoss04.h" />
     <ClInclude Include="CBullet.h" />
+    <ClInclude Include="CBullet04.h" />
+    <ClInclude Include="CBullet_BossAtk01.h" />
     <ClInclude Include="CBullet_Player03.h" />
     <ClInclude Include="CCollisionManager.h" />
     <ClInclude Include="CLine.h" />
@@ -171,7 +174,10 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="CBoss03.cpp" />
+    <ClCompile Include="CBoss04.cpp" />
     <ClCompile Include="CBullet.cpp" />
+    <ClCompile Include="CBullet04.cpp" />
+    <ClCompile Include="CBullet_BossAtk01.cpp" />
     <ClCompile Include="CBullet_Player03.cpp" />
     <ClCompile Include="CCollisionManager.cpp" />
     <ClCompile Include="CItem.cpp" />
