--- a/Platformer_WinAPI/Platformer_WinAPI.vcxproj
+++ b/Platformer_WinAPI/Platformer_WinAPI.vcxproj
@@ -134,6 +134,8 @@
     <ClInclude Include="CAbstractFactory.h" />
     <ClInclude Include="CBoss03.h" />
     <ClInclude Include="CBullet.h" />
+    <ClInclude Include="CBullet02_Boss03.h" />
+    <ClInclude Include="CBullet_Boss03.h" />
     <ClInclude Include="CBullet_Player03.h" />
     <ClInclude Include="CCollisionManager.h" />
     <ClInclude Include="CLine.h" />
@@ -171,6 +173,8 @@
   <ItemGroup>
     <ClCompile Include="CBoss03.cpp" />
     <ClCompile Include="CBullet.cpp" />
+    <ClCompile Include="CBullet02_Boss03.cpp" />
+    <ClCompile Include="CBullet_Boss03.cpp" />
     <ClCompile Include="CBullet_Player03.cpp" />
     <ClCompile Include="CCollisionManager.cpp" />
     <ClCompile Include="CItem.cpp" />
