--- a/Platformer_WinAPI/Platformer_WinAPI.vcxproj.filters
+++ b/Platformer_WinAPI/Platformer_WinAPI.vcxproj.filters
@@ -28,9 +28,6 @@
     <Filter Include="04. Utils">
       <UniqueIdentifier>{92071ca6-55d4-4824-a8da-d8d607f12fb5}</UniqueIdentifier>
     </Filter>
-    <Filter Include="01. Object\00. Object">
-      <UniqueIdentifier>{1fa2703c-9b38-434b-a212-0454a256786c}</UniqueIdentifier>
-    </Filter>
     <Filter Include="01. Object\01. Player">
       <UniqueIdentifier>{1f9ea313-66dd-4620-bd5c-fd0587dc607b}</UniqueIdentifier>
     </Filter>
@@ -124,6 +121,9 @@
     <Filter Include="01. Object\03. Bullet\04. Bullet04">
       <UniqueIdentifier>{d27e0c65-2918-46d2-bf2b-a70493a43326}</UniqueIdentifier>
     </Filter>
+    <Filter Include="02. Manager\06. ScrollManager">
+      <UniqueIdentifier>{2b6b954c-cf2d-4fa7-b43f-21f8d45ef231}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="framework.h">
@@ -149,9 +149,6 @@
     </ClInclude>
     <ClInclude Include="Vector2.h">
       <Filter>04. Utils\00. Vector</Filter>
-    </ClInclude>
-    <ClInclude Include="CObject.h">
-      <Filter>01. Object\00. Object</Filter>
     </ClInclude>
     <ClInclude Include="CPlayer.h">
       <Filter>01. Object\01. Player</Filter>
@@ -225,14 +222,23 @@
     <ClInclude Include="CBoss03.h">
       <Filter>01. Object\02. Monster\03. Boss03</Filter>
     </ClInclude>
-    <ClInclude Include="CPlayer04.h">
-      <Filter>헤더 파일</Filter>
-    </ClInclude>
     <ClInclude Include="CBullet_Player03.h">
-      <Filter>헤더 파일</Filter>
+      <Filter>01. Object\03. Bullet\03. Bullet03</Filter>
     </ClInclude>
     <ClInclude Include="CScrollManager.h">
-      <Filter>헤더 파일</Filter>
+      <Filter>02. Manager\06. ScrollManager</Filter>
+    </ClInclude>
+    <ClInclude Include="CPlayer04.h">
+      <Filter>01. Object\01. Player</Filter>
+    </ClInclude>
+    <ClInclude Include="CBullet_Boss03.h">
+      <Filter>01. Object\03. Bullet\03. Bullet03</Filter>
+    </ClInclude>
+    <ClInclude Include="CObject.h">
+      <Filter>01. Object</Filter>
+    </ClInclude>
+    <ClInclude Include="CBullet02_Boss03.h">
+      <Filter>01. Object\03. Bullet\03. Bullet03</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -244,9 +250,6 @@
     </ClCompile>
     <ClCompile Include="Vector2.cpp">
       <Filter>04. Utils\00. Vector</Filter>
-    </ClCompile>
-    <ClCompile Include="CObject.cpp">
-      <Filter>01. Object\00. Object</Filter>
     </ClCompile>
     <ClCompile Include="CPlayer.cpp">
       <Filter>01. Object\01. Player</Filter>
@@ -314,14 +317,23 @@
     <ClCompile Include="CBoss03.cpp">
       <Filter>01. Object\02. Monster\03. Boss03</Filter>
     </ClCompile>
-    <ClCompile Include="CPlayer04.cpp">
-      <Filter>소스 파일</Filter>
-    </ClCompile>
     <ClCompile Include="CBullet_Player03.cpp">
-      <Filter>소스 파일</Filter>
+      <Filter>01. Object\03. Bullet\03. Bullet03</Filter>
     </ClCompile>
     <ClCompile Include="CScrollManager.cpp">
-      <Filter>소스 파일</Filter>
+      <Filter>02. Manager\06. ScrollManager</Filter>
+    </ClCompile>
+    <ClCompile Include="CPlayer04.cpp">
+      <Filter>01. Object\01. Player</Filter>
+    </ClCompile>
+    <ClCompile Include="CBullet_Boss03.cpp">
+      <Filter>01. Object\03. Bullet\03. Bullet03</Filter>
+    </ClCompile>
+    <ClCompile Include="CObject.cpp">
+      <Filter>01. Object</Filter>
+    </ClCompile>
+    <ClCompile Include="CBullet02_Boss03.cpp">
+      <Filter>01. Object\03. Bullet\03. Bullet03</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
