--- a/Platformer_WinAPI/Platformer_WinAPI.vcxproj
+++ b/Platformer_WinAPI/Platformer_WinAPI.vcxproj
@@ -137,7 +137,9 @@
     <ClInclude Include="CBoss03.h" />
     <ClInclude Include="CBoss04.h" />
     <ClInclude Include="CBullet.h" />
+    <ClInclude Include="CBullet02_Boss03.h" />
     <ClInclude Include="CBullet04.h" />
+    <ClInclude Include="CBullet_Boss03.h" />
     <ClInclude Include="CBullet_BossAtk01.h" />
     <ClInclude Include="CBullet_Player03.h" />
     <ClInclude Include="CCollisionManager.h" />
@@ -183,7 +185,9 @@
     <ClCompile Include="CBoss03.cpp" />
     <ClCompile Include="CBoss04.cpp" />
     <ClCompile Include="CBullet.cpp" />
+    <ClCompile Include="CBullet02_Boss03.cpp" />
     <ClCompile Include="CBullet04.cpp" />
+    <ClCompile Include="CBullet_Boss03.cpp" />
     <ClCompile Include="CBullet_BossAtk01.cpp" />
     <ClCompile Include="CBullet_Player03.cpp" />
     <ClCompile Include="CCollisionManager.cpp" />
