--- a/Platformer_WinAPI/Platformer_WinAPI.vcxproj.filters
+++ b/Platformer_WinAPI/Platformer_WinAPI.vcxproj.filters
@@ -52,9 +52,6 @@
     <Filter Include="02. Manager\02. CollisionManager">
       <UniqueIdentifier>{331ece6f-5c62-41a9-8c77-2845b63c1158}</UniqueIdentifier>
     </Filter>
-    <Filter Include="02. Manager\03. UIManager">
-      <UniqueIdentifier>{d23109e7-20d6-47f1-be17-ebc61261148b}</UniqueIdentifier>
-    </Filter>
     <Filter Include="02. Manager\04. InputManager">
       <UniqueIdentifier>{18b50630-fd69-4c27-b418-b65d5817d59c}</UniqueIdentifier>
     </Filter>
@@ -129,6 +126,9 @@
     </Filter>
     <Filter Include="02. Manager\06. ScrollManager">
       <UniqueIdentifier>{0357aa8d-51b7-428e-b57a-1db96caf5cb6}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="02. Manager\02. CollisionManager\03. UIManager">
+      <UniqueIdentifier>{d23109e7-20d6-47f1-be17-ebc61261148b}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
@@ -226,7 +226,7 @@
       <Filter>04. Utils\02. Utility</Filter>
     </ClInclude>
     <ClInclude Include="CUIManager.h">
-      <Filter>02. Manager\03. UIManager</Filter>
+      <Filter>02. Manager\02. CollisionManager\03. UIManager</Filter>
     </ClInclude>
     <ClInclude Include="CBoss03.h">
       <Filter>01. Object\02. Monster\03. Boss03</Filter>
@@ -252,9 +252,6 @@
     <ClInclude Include="CBullet_BossAtk01.h">
       <Filter>01. Object\03. Bullet\04. Bullet04</Filter>
     </ClInclude>
-    <ClInclude Include="CBoss02.h">
-      <Filter>헤더 파일</Filter>
-    </ClInclude>
     <ClInclude Include="CBoss01.h">
       <Filter>01. Object\02. Monster\01. Boss01</Filter>
     </ClInclude>
@@ -269,6 +266,15 @@
     </ClInclude>
     <ClInclude Include="CMob03.h">
       <Filter>01. Object\02. Monster\05. Mob</Filter>
+    </ClInclude>
+    <ClInclude Include="CBullet_Boss03.h">
+      <Filter>01. Object\03. Bullet\03. Bullet03</Filter>
+    </ClInclude>
+    <ClInclude Include="CBullet02_Boss03.h">
+      <Filter>01. Object\03. Bullet\03. Bullet03</Filter>
+    </ClInclude>
+    <ClInclude Include="CBoss02.h">
+      <Filter>01. Object\02. Monster\02. Boss02</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -345,7 +351,7 @@
       <Filter>01. Object\02. Monster\05. Mob</Filter>
     </ClCompile>
     <ClCompile Include="CUIManager.cpp">
-      <Filter>02. Manager\03. UIManager</Filter>
+      <Filter>02. Manager\02. CollisionManager\03. UIManager</Filter>
     </ClCompile>
     <ClCompile Include="CBoss03.cpp">
       <Filter>01. Object\02. Monster\03. Boss03</Filter>
@@ -371,9 +377,6 @@
     <ClCompile Include="CBullet_BossAtk01.cpp">
       <Filter>01. Object\03. Bullet\04. Bullet04</Filter>
     </ClCompile>
-    <ClCompile Include="CBoss02.cpp">
-      <Filter>소스 파일</Filter>
-    </ClCompile>
     <ClCompile Include="CBoss01.cpp">
       <Filter>01. Object\02. Monster\01. Boss01</Filter>
     </ClCompile>
@@ -388,6 +391,15 @@
     </ClCompile>
     <ClCompile Include="CMob03.cpp">
       <Filter>01. Object\02. Monster\05. Mob</Filter>
+    </ClCompile>
+    <ClCompile Include="CBullet_Boss03.cpp">
+      <Filter>01. Object\03. Bullet\03. Bullet03</Filter>
+    </ClCompile>
+    <ClCompile Include="CBullet02_Boss03.cpp">
+      <Filter>01. Object\03. Bullet\03. Bullet03</Filter>
+    </ClCompile>
+    <ClCompile Include="CBoss02.cpp">
+      <Filter>01. Object\02. Monster\02. Boss02</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
