feat : boss02 dash, stage2 paltform

--- a/Platformer_WinAPI/Platformer_WinAPI.vcxproj
+++ b/Platformer_WinAPI/Platformer_WinAPI.vcxproj
@@ -138,6 +138,7 @@
     <ClInclude Include="CBoss04.h" />
     <ClInclude Include="CBullet.h" />
     <ClInclude Include="CBullet04.h" />
+    <ClInclude Include="CBullet_Boss02.h" />
     <ClInclude Include="CBullet_BossAtk01.h" />
     <ClInclude Include="CBullet_Player03.h" />
     <ClInclude Include="CCollisionManager.h" />
@@ -184,6 +185,7 @@
     <ClCompile Include="CBoss04.cpp" />
     <ClCompile Include="CBullet.cpp" />
     <ClCompile Include="CBullet04.cpp" />
+    <ClCompile Include="CBullet_Boss02.cpp" />
     <ClCompile Include="CBullet_BossAtk01.cpp" />
     <ClCompile Include="CBullet_Player03.cpp" />
     <ClCompile Include="CCollisionManager.cpp" />
