--- a/Platformer_WinAPI/Platformer_WinAPI.vcxproj.filters
+++ b/Platformer_WinAPI/Platformer_WinAPI.vcxproj.filters
@@ -252,9 +252,6 @@
     <ClInclude Include="CBullet_BossAtk01.h">
       <Filter>01. Object\03. Bullet\04. Bullet04</Filter>
     </ClInclude>
-    <ClInclude Include="CBoss02.h">
-      <Filter>헤더 파일</Filter>
-    </ClInclude>
     <ClInclude Include="CBoss01.h">
       <Filter>01. Object\02. Monster\01. Boss01</Filter>
     </ClInclude>
@@ -269,6 +266,12 @@
     </ClInclude>
     <ClInclude Include="CMob03.h">
       <Filter>01. Object\02. Monster\05. Mob</Filter>
+    </ClInclude>
+    <ClInclude Include="CBoss02.h">
+      <Filter>01. Object\02. Monster\02. Boss02</Filter>
+    </ClInclude>
+    <ClInclude Include="CBullet_Boss02.h">
+      <Filter>01. Object\03. Bullet\02. Bullet02</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -371,9 +374,6 @@
     <ClCompile Include="CBullet_BossAtk01.cpp">
       <Filter>01. Object\03. Bullet\04. Bullet04</Filter>
     </ClCompile>
-    <ClCompile Include="CBoss02.cpp">
-      <Filter>소스 파일</Filter>
-    </ClCompile>
     <ClCompile Include="CBoss01.cpp">
       <Filter>01. Object\02. Monster\01. Boss01</Filter>
     </ClCompile>
@@ -388,6 +388,12 @@
     </ClCompile>
     <ClCompile Include="CMob03.cpp">
       <Filter>01. Object\02. Monster\05. Mob</Filter>
+    </ClCompile>
+    <ClCompile Include="CBoss02.cpp">
+      <Filter>01. Object\02. Monster\02. Boss02</Filter>
+    </ClCompile>
+    <ClCompile Include="CBullet_Boss02.cpp">
+      <Filter>01. Object\03. Bullet\02. Bullet02</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
