--- a/Platformer_WinAPI/Platformer_WinAPI.vcxproj.filters
+++ b/Platformer_WinAPI/Platformer_WinAPI.vcxproj.filters
@@ -130,6 +130,9 @@
     <Filter Include="02. Manager\06. ScrollManager">
       <UniqueIdentifier>{0357aa8d-51b7-428e-b57a-1db96caf5cb6}</UniqueIdentifier>
     </Filter>
+    <Filter Include="02. Manager\07. BmpManager">
+      <UniqueIdentifier>{bc90895f-9157-40f6-8924-49b813944b7d}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="framework.h">
@@ -270,6 +273,12 @@
     <ClInclude Include="CBoss02.h">
       <Filter>01. Object\02. Monster\02. Boss02</Filter>
     </ClInclude>
+    <ClInclude Include="CBmpManager.h">
+      <Filter>02. Manager\07. BmpManager</Filter>
+    </ClInclude>
+    <ClInclude Include="CBmp.h">
+      <Filter>02. Manager\07. BmpManager</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Platformer_WinAPI.cpp">
@@ -388,6 +397,12 @@
     </ClCompile>
     <ClCompile Include="CBoss02.cpp">
       <Filter>01. Object\02. Monster\02. Boss02</Filter>
+    </ClCompile>
+    <ClCompile Include="CBmp.cpp">
+      <Filter>02. Manager\07. BmpManager</Filter>
+    </ClCompile>
+    <ClCompile Include="CBmpManager.cpp">
+      <Filter>02. Manager\07. BmpManager</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
