--- a/Platformer_WinAPI/Platformer_WinAPI.vcxproj
+++ b/Platformer_WinAPI/Platformer_WinAPI.vcxproj
@@ -138,8 +138,11 @@
     <ClInclude Include="CBoss03.h" />
     <ClInclude Include="CBoss04.h" />
     <ClInclude Include="CBullet.h" />
+    <ClInclude Include="CBullet02_Boss03.h" />
+    <ClInclude Include="CBullet03_Boss03.h" />
     <ClInclude Include="CBullet04.h" />
     <ClInclude Include="CBullet_Boss02.h" />
+    <ClInclude Include="CBullet_Boss03.h" />
     <ClInclude Include="CBullet_BossAtk01.h" />
     <ClInclude Include="CBullet_BossAtk03.h" />
     <ClInclude Include="CBullet_Player03.h" />
@@ -150,6 +153,7 @@
     <ClInclude Include="CPlayer01.h" />
     <ClInclude Include="CPowerItem.h" />
     <ClInclude Include="CScrollManager.h" />
+    <ClInclude Include="CShield.h" />
     <ClInclude Include="CUtility.h" />
     <ClInclude Include="CItem.h" />
     <ClInclude Include="CLifeItem.h" />
@@ -188,8 +192,11 @@
     <ClCompile Include="CBoss03.cpp" />
     <ClCompile Include="CBoss04.cpp" />
     <ClCompile Include="CBullet.cpp" />
+    <ClCompile Include="CBullet02_Boss03.cpp" />
+    <ClCompile Include="CBullet03_Boss03.cpp" />
     <ClCompile Include="CBullet04.cpp" />
     <ClCompile Include="CBullet_Boss02.cpp" />
+    <ClCompile Include="CBullet_Boss03.cpp" />
     <ClCompile Include="CBullet_BossAtk01.cpp" />
     <ClCompile Include="CBullet_BossAtk03.cpp" />
     <ClCompile Include="CBullet_Player03.cpp" />
@@ -213,6 +220,7 @@
     <ClCompile Include="CPlayer04.cpp" />
     <ClCompile Include="CPowerItem.cpp" />
     <ClCompile Include="CScrollManager.cpp" />
+    <ClCompile Include="CShield.cpp" />
     <ClCompile Include="CStage.cpp" />
     <ClCompile Include="CStage01.cpp" />
     <ClCompile Include="CStage02.cpp" />
